configuración de menu

--- a/islaDelColor/generadoDePaletasDeColores/style.css
+++ b/islaDelColor/generadoDePaletasDeColores/style.css
@@ -92,9 +92,12 @@ button:hover {
     position: fixed;          /* siempre arriba */
     top: 0;
     left: 0;
-    width: 100%;              /* ocupa todo el ancho */
+    width: 50%;             
+    justify-content: center;
+    text-align: center;
     background-color: #f8f8f8;
     border-bottom: 1px solid #ddd;
+    border-radius: 10px;
     padding: 10px 0;
     z-index: 1000;            /* queda encima de todo */
 }
@@ -123,6 +126,6 @@ button:hover {
 
 /* Hover estilo buscador */
 .menu a:hover {
-  color: #0066cc;           /* cambia color */
-  border-bottom: 2px solid #0066cc; /* subrayado tipo pestaña */
+    color: #0066cc;           /* cambia color */
+    border-bottom: 2px solid #0066cc; /* subrayado tipo pestaña */
 }
