--- a/islaDelColor/inicio.css
+++ b/islaDelColor/inicio.css
@@ -6,7 +6,7 @@
     --rojo-pirata: #a72545;
 }
 body{
-    background-color: var(--color-de-fondo);
+    background:linear-gradient(to bottom, rgba(30, 122, 2, 0.537), rgba(6, 81, 138, 0.97));;
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
@@ -53,7 +53,7 @@ a:hover svg {
     padding: 20px;
     border: 2px solid #ccc;
     border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+    box-shadow: 10px 2px 10px 2px  rgb(128, 99, 5);
 }
 .mapa-icon{
     width: 32px;
