--- a/islaDelColor/ingresarColor/styles.css
+++ b/islaDelColor/ingresarColor/styles.css
@@ -1,64 +1,99 @@
-:root {
-      --color-blanco: #ffffff;
-      --color-negro: #333;
-      --azul-boton: #007BFF;
-      --azul-boton-hover: #0056b3;
-    }
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;   
-    align-items: center;       
-    height: 100vh;            
+/* Estilos globales */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-    h1 {
-      color: var(--color-negro);
-      margin: 10px;
+/*Variables globales*/
+:root{
+    --color-blaco:#ffffff;
+    --color-negro:#333;
+    --azul-boton: #007BFF;
+    --azul-boton-hover: #0056b3;
+}
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color:var(--color-blaco);
+    transition: background-color 0.5s ease;
+}
+
+.container {
+    backdrop-filter: blur(2.4px) saturate(148%);
+    -webkit-backdrop-filter: blur(2.4px) saturate(148%);
+    text-align: center;
+    padding-top: 20px;
+    margin-top: 1rem;
+    border-radius: 10px;
+    background-color:var(--color-blaco);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.palette-style{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.color-block{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+.color-label{
+    position: absolute;
+    top: -25px;
+    font-weight: bold;
+    color: #333;
+}
+.color-box{
+    width: 100px; 
+    height: 100px;
+    border:none;
+}
+
+h2 {
+    margin-bottom: 20px;
+    color: var(--color-negro);
+}
+p {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.copy-icon {
+    cursor: pointer;
+    }
+    .copy-icon:hover {
+    stroke: #0056b3;
     }
 
-    form {
-      margin-top: 40px;
-    }
+#color-code {
+    font-weight: bold;
+    color: var(--color-negro);
+}
 
-    label {
-      margin: 10px;
-    }
+button {
+    padding:10px 20px;
+    margin: 20px;
+    font-size: 16px;
+    color:var(--color-blaco);
+    background-color:var(--azul-boton);
+    border-radius: 5px;
+    cursor: pointer;
+    border:none;
+    transition: background-color 0.3s ease;
+}
 
-    input[type="submit"] {
-      margin-left: 10px;
-      background-color: var(--azul-boton);
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      cursor: pointer;
-      border-radius: 4px;
-      transition: background-color 0.3s ease;
-    }
-
-    input[type="submit"]:hover {
-      background-color: var(--azul-boton-hover);
-    }
-
-    .contenedor{
-      background-color: #ffffff;
-    }
-
-    .palette {
-      display: flex;
-      gap: 10px;
-      margin-top: 20px;
-    }
-
-    .color-box {
-      width: 60px;
-      height: 60px;
-      gap: 10px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
+button:hover {
+    background-color:var(--azul-boton-hover);
+}
 /*Menú de la isla del color*/
 .menu {
     position: fixed;          /* siempre arriba */
@@ -66,8 +101,8 @@ body {
     width: 50%;             
     justify-content: center;
     text-align: center;
-    background-color: var(--color-blanco);
-  border-bottom: 1px solid var(--color-blanco);
+    background-color: var(--color-blaco);
+    border-bottom: 1px solid var(--color-blaco);
     border-radius: 10px;
     padding: 10px 0;
     z-index: 1000;            /* queda encima de todo */
