añadiendo tesoros a la isla

--- a/islaDelColor/inicio.css
+++ b/islaDelColor/inicio.css
@@ -115,35 +115,13 @@ section p {
     border-bottom: 2px solid var(--tesoro);
 }
 
-/* Paleta de colores (tesoros cromáticos) */
-.palette-style{
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    justify-content: center;
-    margin-top: 20px;
-}
+/*Imagen de los tesoros*/
 
-.color-block{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-}
-
-.color-label{
-    position: absolute;
-    top: -25px;
-    font-weight: bold;
-    color: var(--color-negro);
-    text-shadow: 1px 1px var(--tesoro);
-}
-
-.color-box{
-    width: 100px; 
-    height: 100px;
-    border: 2px solid var(--tesoro);
-    border-radius: 8px;
+img{
+    width: 50%;
+    height: 50%;
+    mix-blend-mode: multiply;
+    filter: brightness(1) contrast(1.2);
 }
 
 /* Footer */
