--- a/islaDelColor/generadoDePaletasDeColores/style.css
+++ b/islaDelColor/generadoDePaletasDeColores/style.css
@@ -24,7 +24,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: var(--pergamino);
+    background-color: var(--blanco);
     color: var(--negro);
     transition: background-color 0.5s ease;
 }
@@ -35,7 +35,7 @@ body {
     padding-top: 20px;
     margin-top: 1rem;
     border-radius: 12px;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: var(--blanco);
 }
 
 /* Paleta */
@@ -106,7 +106,7 @@ button {
 }
 
 button:hover {
-    background-color:var(--sangre);
+    background-color:var(--madera);
     transform: scale(1.05);
 }
 
