--- a/islaDelColor/temaColores/style.css
+++ b/islaDelColor/temaColores/style.css
@@ -22,7 +22,7 @@ body {
 header {
     text-align: center;
     padding: 50px 20px 40px 20px;
-    background-color: var(--madera);
+    background-color: var(--sangre);
     color: var(--blanco);
     box-shadow: inset 0 0 20px var(--negro);
 }
@@ -35,9 +35,6 @@ header h1 {
 
 header p {
     font-size: 1.2rem;
-    max-width: 600px;
-    margin: 0 auto;
-    line-height: 1.6;
 }
 
 /* Menú pirata */
@@ -75,6 +72,9 @@ header p {
     color: var(--azul-boton-hover);
     border-bottom: 2px solid var(--tesoro);
 }
+
+
+
 
 /* Botones estilo pirata */
 .buscar {
